# media_tools

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yaml
old_sh_scripts/: check_for_duplicates.sh  check_for_duplicates.test.sh  check_sd_card.sh  extract_from_images.sh  extract_from_videos.sh  reduce_2_720p.sh  remove_duplicate_dng.sh  remove_suffix.sh  rename_dji_fly.sh  split_date.sh
src/media_tools/: controller.py  main.py
src/media_tools/gui/: cli.py
src/media_tools/tools/: deduper.py  raw_cleaner.py
tests/: test_controller.py  test_deduper.py  test_raw_cleaner.py
